docs/destinationrule-spec.yaml
# DestinationRule 典型定义 (networking.istio.io/v1beta1)
# 请根据此结构指定需要导出为指标标签的字段（metadata / spec 均可）
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: reviews-destination     # 资源名称
  namespace: default             # 命名空间
  labels:                        # 标签（可选）
    app: reviews
  annotations:                   # 注解（可选）
    # ...
spec:
  host: mytest.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        distribute:
        - from: cluster1/*
          to:
            cluster2/*: 20
            cluster3/*: 50
            cluster4/*: 30
        - from: cluster2/*
          to:
            cluster2/*: 20
            cluster3/*: 50
            cluster4/*: 30

# 采集指标
istio_config_destinationrule_spec_host_trafficpolicy_loadbalancer_localitylbsetting_distribute_weight{namespace="default",name="reviews-destination", host="mytest.default.svc.cluster.local", from="cluster1/*", to="cluster2/*"} 20
istio_config_destinationrule_spec_host_trafficpolicy_loadbalancer_localitylbsetting_distribute_weight{namespace="default",name="reviews-destination", host="mytest.default.svc.cluster.local", from="cluster1/*", to="cluster3/*"} 50
istio_config_destinationrule_spec_host_trafficpolicy_loadbalancer_localitylbsetting_distribute_weight{namespace="default",name="reviews-destination", host="mytest.default.svc.cluster.local", from="cluster1/*", to="cluster4/*"} 30
istio_config_destinationrule_spec_host_trafficpolicy_loadbalancer_localitylbsetting_distribute_weight{namespace="default",name="reviews-destination", host="mytest.default.svc.cluster.local", from="cluster2/*", to="cluster2/*"} 20
istio_config_destinationrule_spec_host_trafficpolicy_loadbalancer_localitylbsetting_distribute_weight{namespace="default",name="reviews-destination", host="mytest.default.svc.cluster.local", from="cluster2/*", to="cluster3/*"} 50
istio_config_destinationrule_spec_host_trafficpolicy_loadbalancer_localitylbsetting_distribute_weight{namespace="default",name="reviews-destination", host="mytest.default.svc.cluster.local", from="cluster2/*", to="cluster4/*"} 30
